  * Use apt_pkg.PackageManager rather than apt_pkg.GetPackageManager.
  * Use apt_pkg.Acquire rather than apt_pkg.GetAcquire.
  * Use mark_foo/marked_foo rather than markFoo/markedFoo.
  * Use apt_pkg.ActionGroup rather than apt_pkg.GetPkgActionGroup.
  * Use apt_pkg.ProblemResolver rather than apt_pkg.GetPkgProblemResolver.
  * Use apt_pkg.read_config_file rather than apt_pkg.ReadConfigFile.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100

update-manager (1:0.162) quantal; urgency=low

  * DistUpgrade/build-tarball.sh:
    - include "DistUpgrade" symlink in tarball to ensure relative
      imports keep working

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jun 2012 14:27:50 +0200

update-manager (1:0.161) quantal; urgency=low

  * /usr/share/nvidia-common/obsolete was renamed to
    /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with
    this.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Jun 2012 20:53:46 +0100

update-manager (1:0.160) quantal; urgency=low

  [ Colin Watson ]
  * Use Python 3-style print functions.
  * Use "except Exception as e" syntax rather than the old-style "except
    Exception, e".
  * Fix a few assorted pyflakes warnings.
  * Use string methods rather than functions from the string module.
  * Replace most uses of filter and map with list comprehensions or for
    loops.
  * Use open() rather than file().
  * Use Python 3 renaming of ConfigParser if available.
  * Use "raise Exception(value)" syntax rather than the old-style "raise
    Exception, value".
  * Remove duplicate imports of os.path; 'import os' is enough.
  * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
  * Remove all hard tabs from Python code.  Python 3 no longer tolerates
    mixing tabs and spaces for indentation.
  * Use Python 3 renaming of httplib if available.
  * Use email.utils.parsedate (with a DST handling correction) rather than
    the long-deprecated rfc822.parsedate.